Read prompts from YAML files
Reads prompt definitions from YAML files, tries to resolve a good order
to run them in, then runs them.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "packageManager": "yarn@4.1.0",
   "dependencies": {
-    "got": "^14.2.0"
+    "got": "^14.2.0",
+    "yaml": "^2.3.4"
   }
 }
