--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "type": "module",
   "packageManager": "yarn@4.1.0",
   "dependencies": {
+    "express": "^4.18.3",
     "got": "^14.2.0",
+    "pug": "^3.0.2",
     "yaml": "^2.3.4"
   }
 }
